# quick-stash-backend

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
api/: deps.py
api/routers/: auth.py  payment_methods.py  transactions.py  users.py
core/: config.py  database.py  security.py
crud/: payment_method.py  transaction.py  user.py
models/: payment_method.py  transaction.py  user.py
schemas/: __init__.py  account.py  payment_method.py  transaction.py  user.py
scripts/: auto-deploy.sh  bootstrap.sh  manage.sh
tests/: test_auth.py
